# tech_stack_practice

./: .env.ci  .flake8  .gitignore  .pre-commit-config.yaml  .pydocstyle  Dockerfile.backend  Makefile  README.md  app.py  backend.py  deployment-guide.md  docker-compose.debug-internal.yaml  docker-compose.debug-remote.yaml  docker-compose.debug-test.yaml  docker-compose.debug.yaml  docker-compose.yaml  docker-compose.yml  generate_csv.py  init.sql  package-lock.json  requirements.txt  setup.cfg  streamlit_app.py
.github/: dependabot.yml
.github/workflows/: cd-backend.yml  cd-frontend.yml  ci.yml
backend/: .gitignore  Dockerfile  Profile  backend.py  main.py  pyproject.toml  requirements.txt
backend/.ebextensions/: 01-env-vars.config  01-no-http.config  01-remove-http-listener.config
backend/.platform/hooks/postdeploy/: 01-ensure-ssm.sh  01-stream-docker-logs.sh
backend/backend/: __init__.py  ds.py  ds_backup.py  main.py  utils.py
backend/scripts/: deploy.sh  ssh-to-backend.sh  wait-for-db.sh
backend/tests/: test_main_integration.py  test_main_unit.py
backend/tests/integration/: test_main_integration.py
backend/tests/unit/: test_main_unit.py
data/: random_numbers.csv
db/: init-multi-db.sh  init.sql
frontend/: Dockerfile  pyproject.toml  requirements.txt  streamlit_app.py
frontend/.ebextensions/: 01-env-vars.config  02-https-listener.config
frontend/.platform/hooks/postdeploy/: 01-add-ec2-user-to-docker.sh
frontend/frontend/: __init__.py  streamlit_app.py
frontend/frontend/.elasticbeanstalk/: config.yml
frontend/scripts/: deploy.sh  install-vscode-extensions.sh  ssh-to-frontend.sh
scripts/: clean_docker.sh  generate_csv.py  install-vscode-extensions.sh  ssm-connect.sh  unset_env.sh
