[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Your backend package"
authors = ["alanlegoallec1990@gmail.com"]
packages = [{ include = "backend" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
uvicorn = "*"
sqlalchemy = "*"
psycopg2-binary = "*"
openai = "1.77.0"
pydantic = "*"
starlette = "*"
requests = "*"
cryptography = ">=42.0.0"
pyopenssl = ">=24.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
debugpy = "*"
pytest-cov = "^4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
