[tool.poetry]
name = "frontend"
version = "0.1.0"
description = "Streamlit frontend for random number multiplier"
authors = ["Your Name <your@email.com>"]
packages = [{ include = "frontend" }]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.37.0"
requests = "*"
pytest-cov = "^4.0"

[tool.poetry.group.dev.dependencies]
debugpy = "*"
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
