[tool.poetry]
name = "frontend"
version = "0.1.0"
description = "Streamlit frontend for random number multiplier"
authors = ["alanlegoallec1990"]
packages = [{ include = "frontend" }]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "1.44.1"
requests = "2.32.3"
pytest-cov = "6.1.1"

[tool.poetry.group.dev.dependencies]
debugpy = "1.8.14"
pytest = "8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
